--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.10+1
   form_field_validator: ^1.1.0
-  cached_network_image: ^3.2.0
+  cached_network_image: ^3.4.1
   flutter_rating_bar: ^4.0.1
   flutter_widget_from_html_core: ^0.15.1
   animations: ^2.0.11
@@ -30,6 +30,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.4
   mailer: ^6.5.0
   shared_preferences: ^2.5.3
+  shimmer: ^3.0.0
 
 dev_dependencies:
 
